--- a/HTML/analyze/_main.html
+++ b/HTML/analyze/_main.html
@@ -83,9 +83,9 @@
 		}
 		</style>
 		
-		<script src="./js/data.js?1"></script>
-		<script src="./js/canvasjs.min.js?1"></script>
-		<script src="./js/main.js?1"></script>
+		<script src="./_js/data.js"></script>
+		<script src="./_js/canvasjs.min.js"></script>
+		<script src="./_js/main.js"></script>
 		<script>
 			loadSource();
 			loadGraph();
@@ -102,8 +102,6 @@
 						},
 						axisX:
 						{
-							minimum: page_source.start,
-							maximum: page_source.stop,
 							title: "2θ",
 						},
 						axisY:
